# daily-geoprocessing-pipeline

./: Dockerfile  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt
config/: fields.yaml
dagster_project/: __init__.py  definitions.py  requirements.txt
dagster_project/assets/: field_processing.py  init_inputs.py  raw_satellite.py
dagster_project/resources/: minio_resource.py
terraform/: dagster.tf  main.tf  minio.tf  variables.tf
